--- a/backend-ems/src/main/resources/application.properties
+++ b/backend-ems/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/ems
+spring.datasource.username=project1
+spring.datasource.password=Project1@123
+
+spring.jpa.hibernate.ddl-auto=create
+
+#logging.level.org.springframework.security=DEBUG
+spring.jpa.show-sql=true
