--- a/backend-ems/src/main/resources/application.properties
+++ b/backend-ems/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ems
 spring.datasource.username=project1
 spring.datasource.password=Project1@123
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #logging.level.org.springframework.security=DEBUG
 spring.jpa.show-sql=true
