--- a/backend-ems/src/main/resources/application.properties
+++ b/backend-ems/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-
+#database details associated with mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ems
 spring.datasource.username=project1
 spring.datasource.password=Project1@123
 
+#if we are using this application in new computer
+#spring.jpa.hibernate.ddl-auto=create
+
+
+#if we are using this application in which database is already created
 spring.jpa.hibernate.ddl-auto=update
+
 
 #logging.level.org.springframework.security=DEBUG
 spring.jpa.show-sql=true
