implemented basic spring security

--- a/backend-ems/src/main/resources/application.properties
+++ b/backend-ems/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.datasource.password=Project1@123
 #if we are using this application in which database is already created
 spring.jpa.hibernate.ddl-auto=update
 
+#spring.security.user.name=user
+#spring.security.user.password=user123
 
 #logging.level.org.springframework.security=DEBUG
 spring.jpa.show-sql=true
+
+
