Updated role based security with jSessionId

--- a/backend-ems/src/main/resources/application.properties
+++ b/backend-ems/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=Project1@123
 
 
 #if we are using this application in which database is already created
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 #spring.security.user.name=user
 #spring.security.user.password=user123
