--- a/backend-ems/src/main/resources/application.properties
+++ b/backend-ems/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database details associated with mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ems
-spring.datasource.username=project1
-spring.datasource.password=Project1@123
+spring.datasource.username=root
+spring.datasource.password=Sethanurag89@
 
 #if we are using this application in new computer
 #spring.jpa.hibernate.ddl-auto=create
