--- a/frontend-ems/package.json
+++ b/frontend-ems/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "bootstrap": "^5.2.3",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.5",
     "tslib": "^2.3.0",
